[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Menus/Milky Coffee.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Menus/ReadyToPlay.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 130
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 81
font_data = ExtResource( 1 )

[node name="ReadyToPlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1922.0
margin_bottom = 1076.0
color = Color( 0.658824, 0.607843, 0.886275, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1919.0
margin_bottom = 1079.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 144.0
margin_top = 260.0
margin_right = 1774.0
margin_bottom = 819.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 1630.0
margin_bottom = 283.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 1630.0
margin_bottom = 283.0
custom_fonts/font = SubResource( 1 )
text = "Ready to fight to save your
best friend?"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 287.0
margin_right = 1630.0
margin_bottom = 559.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_left = 545.0
margin_right = 1084.0
margin_bottom = 272.0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_right = 539.0
margin_bottom = 108.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_right = 539.0
margin_bottom = 108.0

[node name="Arrow" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 44.0
margin_bottom = 108.0
rect_min_size = Vector2( 44, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="ReadyButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 48.0
margin_right = 539.0
margin_bottom = 108.0
rect_min_size = Vector2( 491, 0 )
custom_fonts/font = SubResource( 3 )
text = "Let's Go!"

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 112.0
margin_right = 539.0
margin_bottom = 160.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer3"]
margin_left = 269.0
margin_right = 269.0
margin_bottom = 48.0
text = "

"

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer"]
margin_top = 164.0
margin_right = 539.0
margin_bottom = 272.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_right = 539.0
margin_bottom = 108.0

[node name="Arrow" type="Label" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 44.0
margin_bottom = 108.0
rect_min_size = Vector2( 44, 0 )
custom_fonts/font = SubResource( 2 )
text = ">"

[node name="NotReadyButton" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 48.0
margin_right = 539.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 3 )
text = "Back to Menu"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer/ReadyButton" to="." method="_on_ReadyButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer/NotReadyButton" to="." method="_on_NotReadyButton_pressed"]
